@@ -1,31 +1,34 @@
 package uk.gov.hmcts.reform.finrem.caseorchestration.handler.managebarrister;
 
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.stereotype.Service;
-import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
-import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.callback.CallbackType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.controllers.GenericAboutToStartOrSubmitCallbackResponse;
-import uk.gov.hmcts.reform.finrem.caseorchestration.handler.CallbackHandler;
+import uk.gov.hmcts.reform.finrem.caseorchestration.handler.CallbackHandlerLogger;
+import uk.gov.hmcts.reform.finrem.caseorchestration.handler.FinremCallbackHandler;
+import uk.gov.hmcts.reform.finrem.caseorchestration.handler.FinremCallbackRequest;
+import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.FinremCaseDetailsMapper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.EventType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseAssignedUserRolesResource;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseRole;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseType;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseData;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.CaseAssignedRoleService;
 
-import java.util.Map;
-
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CASEWORKER_ROLE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CASEWORKER_ROLE_FIELD_SHOW_LABEL;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CASE_ROLE;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CASE_ROLE_FOR_FIELD_SHOW;
 
 @Slf4j
 @Service
-@RequiredArgsConstructor
-public class ManageBarristerAboutToStartHandler implements CallbackHandler<Map<String, Object>> {
+public class ManageBarristerAboutToStartHandler extends FinremCallbackHandler {
 
     private final CaseAssignedRoleService caseAssignedRoleService;
+
+    public ManageBarristerAboutToStartHandler(FinremCaseDetailsMapper finremCaseDetailsMapper,
+                                              CaseAssignedRoleService caseAssignedRoleService) {
+        super(finremCaseDetailsMapper);
+        this.caseAssignedRoleService = caseAssignedRoleService;
+    }
 
     @Override
     public boolean canHandle(CallbackType callbackType, CaseType caseType, EventType eventType) {
@@ -35,27 +38,26 @@ public class ManageBarristerAboutToStartHandler implements CallbackHandler<Map<S
     }
 
     @Override
-    public GenericAboutToStartOrSubmitCallbackResponse<Map<String, Object>> handle(CallbackRequest callbackRequest,
-                                                                                   String userAuthorisation) {
-        log.info("In Manage barrister about to start callback for Case ID: {}", callbackRequest.getCaseDetails().getId());
-        CaseDetails caseDetails = callbackRequest.getCaseDetails();
-        Map<String, Object> caseData = callbackRequest.getCaseDetails().getData();
+    public GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handle(FinremCallbackRequest callbackRequest,
+                                                                              String userAuthorisation) {
+        log.info(CallbackHandlerLogger.aboutToStart(callbackRequest));
 
-        CaseAssignedUserRolesResource userCaseRole =
-            caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), userAuthorisation);
-        if (userCaseRole.getCaseAssignedUserRoles() == null || userCaseRole.getCaseAssignedUserRoles().isEmpty()) {
-            caseData.put(CASE_ROLE, CASEWORKER_ROLE);
-            caseData.put(CASE_ROLE_FOR_FIELD_SHOW, CASEWORKER_ROLE_FIELD_SHOW_LABEL);
+        FinremCaseData caseData = callbackRequest.getCaseDetails().getData();
+
+        CaseAssignedUserRolesResource userCaseRole = caseAssignedRoleService.getCaseAssignedUserRole(
+            callbackRequest.getCaseDetails().getId().toString(), userAuthorisation);
+        if (CollectionUtils.isEmpty(userCaseRole.getCaseAssignedUserRoles())) {
+            caseData.setCurrentUserCaseRole(CaseRole.CASEWORKER);
+            caseData.setCurrentUserCaseRoleLabel(CASEWORKER_ROLE_FIELD_SHOW_LABEL);
         } else {
-            String caseRole = userCaseRole.getCaseAssignedUserRoles().get(0).getCaseRole();
-            caseData.put(CASE_ROLE, caseRole);
-            caseData.put(CASE_ROLE_FOR_FIELD_SHOW,
-                caseRole.replace("[", "").replace("]",""));
+            String caseRole = userCaseRole.getCaseAssignedUserRoles().getFirst().getCaseRole();
+            caseData.setCurrentUserCaseRole(CaseRole.forValue(caseRole));
+            caseData.setCurrentUserCaseRoleLabel(caseRole.replace("[", "").replace("]",""));
         }
+        caseData.setBarristerParty(null);
 
-        log.info("current user case role is {} for Case ID: {}", caseData.get(CASE_ROLE), caseDetails.getId());
-
-        return GenericAboutToStartOrSubmitCallbackResponse.<Map<String, Object>>builder().data(caseData).build();
+        return GenericAboutToStartOrSubmitCallbackResponse.<FinremCaseData>builder()
+            .data(caseData)
+            .build();
     }
-
 }
