@@ -1,10 +1,8 @@
 package uk.gov.hmcts.reform.finrem.caseorchestration.integrationtest.barristers;
 
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import feign.FeignException;
-import org.apache.commons.lang3.StringUtils;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.ArgumentCaptor;
@@ -41,10 +39,12 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.letterdetails.address
 import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.letterdetails.address.LetterAddresseeGeneratorMapper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.letterdetails.address.RespondentLetterAddresseeGenerator;
 import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.notificationrequest.FinremNotificationRequestMapper;
+import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.notificationrequest.NotificationRequestBuilderFactory;
 import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.notificationrequest.NotificationRequestMapper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.EventType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Barrister;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.BarristerData;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.BarristerParty;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseAssignedUserRole;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseAssignedUserRolesResource;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseAssignmentUserRole;
@@ -52,10 +52,12 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseAssignmentUser
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseAssignmentUserRolesRequest;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseAssignmentUserRolesResource;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseDocument;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseRole;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.ChangedRepresentative;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Element;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseData;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Organisation;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.RepresentationUpdate;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.RepresentationUpdateHistoryCollection;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.notification.NotificationRequest;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.organisation.OrganisationUser;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.organisation.OrganisationsResponse;
@@ -65,6 +67,7 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.service.AssignCaseAccessServ
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.BulkPrintService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.CallbackDispatchService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.CaseAssignedRoleService;
+import uk.gov.hmcts.reform.finrem.caseorchestration.service.CaseRoleService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.FeatureToggleService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.GenericDocumentService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.IdamService;
@@ -74,6 +77,7 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.service.PaperNotificationSer
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.PrdOrganisationService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.RestService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.SystemUserService;
+import uk.gov.hmcts.reform.finrem.caseorchestration.service.adapters.BarristerLetterServiceAdapter;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.evidencemanagement.EvidenceManagementDownloadService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.express.ExpressCaseService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.noc.solicitors.CheckApplicantSolicitorIsDigitalService;
@@ -82,8 +86,6 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.service.noc.solicitors.Check
 
 import java.net.URISyntaxException;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasSize;
@@ -103,8 +105,6 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CASEWORKER_ROLE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CASE_ROLE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.MANAGE_BARRISTER_PARTY;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.REPRESENTATION_UPDATE_HISTORY;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESPONDENT;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESPONDENT_BARRISTER_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESPONDENT_BARRISTER_ROLE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESP_SOLICITOR_POLICY;
@@ -120,7 +120,8 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.service.CcdServiceTes
     EvidenceManagementDownloadService.class, LetterAddresseeGeneratorMapper.class, ApplicantLetterAddresseeGenerator.class,
     RespondentLetterAddresseeGenerator.class, IntervenerOneLetterAddresseeGenerator.class, IntervenerTwoLetterAddresseeGenerator.class,
     IntervenerThreeLetterAddresseeGenerator.class, IntervenerFourLetterAddresseeGenerator.class,
-    InternationalPostalService.class, CourtDetailsConfiguration.class})
+    InternationalPostalService.class, CourtDetailsConfiguration.class, BarristerLetterServiceAdapter.class,
+    FinremNotificationRequestMapper.class, CaseRoleService.class, NotificationRequestBuilderFactory.class})
 public class ManageBarristersITest implements IntegrationTest {
 
     private static final String SERVICE_AUTH_TOKEN = "serviceAuth";
@@ -138,13 +139,9 @@ public class ManageBarristersITest implements IntegrationTest {
     private static final String SYS_USER_TOKEN = "sysUserToken";
     private static final String RESP_SOL_ID = "someOtherId";
     private static final String CASEWORKER_NAME = "the Caseworker";
-    public static final String APP_BARR_ORG_NAME = "app_barr_org_name";
-
-    private static final String END_POINT_BARRISTER_ADDED = "http://localhost:8086/notify/contested/barrister-access-added";
-
-    private static final String END_POINT_BARRISTER_REMOVED = "http://localhost:8086/notify/contested/barrister-access-removed";
-    public static final String ADDED_BIN_URL = "added_bin_url";
-    public static final String REMOVED_BIN_URL = "REMOVED_BIN_URL";
+    private static final String APP_BARR_ORG_NAME = "app_barr_org_name";
+    private static final String ADDED_BIN_URL = "added_bin_url";
+    private static final String REMOVED_BIN_URL = "REMOVED_BIN_URL";
 
     @Autowired
     private CcdCallbackController ccdCallbackController;
@@ -191,8 +188,6 @@ public class ManageBarristersITest implements IntegrationTest {
     @MockitoBean
     private CheckSolicitorIsDigitalService checkSolicitorIsDigitalService;
     @MockitoBean
-    private FinremNotificationRequestMapper finremNotificationRequestMapper;
-    @MockitoBean
     private PaperNotificationService paperNotificationService;
     @MockitoBean
     private ExpressCaseService expressCaseService;
@@ -215,9 +210,8 @@ public class ManageBarristersITest implements IntegrationTest {
 
         verify(dataStoreClient).getUserRoles(AUTH_TOKEN, SERVICE_AUTH_TOKEN, CASE_ID, USER_ID);
         assertNotNull(response.getBody());
-        Map<String, Object> data = (Map<String, Object>) response.getBody().getData();
-        String caseRole = Objects.toString(data.get(CASE_ROLE), StringUtils.EMPTY);
-        assertThat(caseRole, is(APP_SOLICITOR_POLICY));
+        FinremCaseData caseData = (FinremCaseData) response.getBody().getData();
+        assertThat(caseData.getCurrentUserCaseRole(), is(CaseRole.APP_SOLICITOR));
     }
 
     @Test
@@ -306,7 +300,7 @@ public class ManageBarristersITest implements IntegrationTest {
         when(authTokenGenerator.generate()).thenReturn(SERVICE_AUTH_TOKEN);
         when(idamService.getIdamUserId(AUTH_TOKEN)).thenReturn(USER_ID);
         when(idamService.getIdamFullName(AUTH_TOKEN)).thenReturn(SOLICITOR_NAME);
-        when(organisationApi.findUserByEmail(AUTH_TOKEN, SERVICE_AUTH_TOKEN, RESP_BARRISTER_EMAIL_ONE))
+        when(organisationApi.findUserByEmail(SYS_USER_TOKEN, SERVICE_AUTH_TOKEN, RESP_BARRISTER_EMAIL_ONE))
             .thenReturn(OrganisationUser.builder().userIdentifier(RESP_BARRISTER_ID).build());
         when(systemUserService.getSysUserToken()).thenReturn(SYS_USER_TOKEN);
 
@@ -318,14 +312,11 @@ public class ManageBarristersITest implements IntegrationTest {
 
         verify(caseDataApiV2).addCaseUserRoles(SYS_USER_TOKEN, SERVICE_AUTH_TOKEN, caseAssignmentUserRolesRequest());
 
-        assertNotNull(response.getBody());
-        Map<String, Object> data = (Map<String, Object>) response.getBody().getData();
-        List<Element<RepresentationUpdate>> representationUpdateHistory = objectMapper
-            .convertValue(data.get(REPRESENTATION_UPDATE_HISTORY), new TypeReference<>() {
-            });
+        List<RepresentationUpdateHistoryCollection> representationUpdateHistory =
+            ((FinremCaseData) response.getBody().getData()).getRepresentationUpdateHistory();
 
         assertThat(representationUpdateHistory, hasSize(1));
-        RepresentationUpdate update = representationUpdateHistory.get(0).getValue();
+        RepresentationUpdate update = representationUpdateHistory.getFirst().getValue();
         assertThat(update.getAdded(), is(ChangedRepresentative.builder()
             .name(RESP_BARRISTER_NAME)
             .email(RESP_BARRISTER_EMAIL_ONE)
@@ -351,7 +342,7 @@ public class ManageBarristersITest implements IntegrationTest {
         CallbackRequest request = buildCallbackRequest();
         request.getCaseDetails().getData().put(RESPONDENT_BARRISTER_COLLECTION, respondentBarristerCollection());
         request.getCaseDetails().getData().put(CASE_ROLE, CASEWORKER_ROLE);
-        request.getCaseDetails().getData().put(MANAGE_BARRISTER_PARTY, RESPONDENT);
+        request.getCaseDetails().getData().put(MANAGE_BARRISTER_PARTY, BarristerParty.RESPONDENT);
 
         ResponseEntity<GenericAboutToStartOrSubmitCallbackResponse> response =
             ccdCallbackController.ccdAboutToSubmit(AUTH_TOKEN, request);
@@ -359,13 +350,11 @@ public class ManageBarristersITest implements IntegrationTest {
         verify(caseDataApiV2).addCaseUserRoles(SYS_USER_TOKEN, SERVICE_AUTH_TOKEN, caseAssignmentUserRolesRequest());
 
         assertNotNull(response.getBody());
-        Map<String, Object> data = (Map<String, Object>) response.getBody().getData();
-        List<Element<RepresentationUpdate>> representationUpdateHistory = objectMapper
-            .convertValue(data.get(REPRESENTATION_UPDATE_HISTORY), new TypeReference<>() {
-            });
+        List<RepresentationUpdateHistoryCollection> representationUpdateHistory =
+            ((FinremCaseData) response.getBody().getData()).getRepresentationUpdateHistory();
 
         assertThat(representationUpdateHistory, hasSize(1));
-        RepresentationUpdate update = representationUpdateHistory.get(0).getValue();
+        RepresentationUpdate update = representationUpdateHistory.getFirst().getValue();
         assertThat(update.getAdded(), is(ChangedRepresentative.builder()
             .name(RESP_BARRISTER_NAME)
             .email(RESP_BARRISTER_EMAIL_ONE)
@@ -389,6 +378,7 @@ public class ManageBarristersITest implements IntegrationTest {
         when(organisationApi.findOrganisationByOrgId(any(), any(), any())).thenReturn(organisationsResponse());
 
         CallbackRequest request = buildCallbackRequest();
+        request.getCaseDetails().getData().put(MANAGE_BARRISTER_PARTY, BarristerParty.APPLICANT);
         request.getCaseDetails().getData().put(APPLICANT_BARRISTER_COLLECTION, applicantBarristerCollection());
 
         ccdCallbackController.ccdSubmittedEvent(AUTH_TOKEN, request);
@@ -415,6 +405,7 @@ public class ManageBarristersITest implements IntegrationTest {
         when(organisationApi.findOrganisationByOrgId(any(), any(), any())).thenReturn(organisationsResponse());
 
         CallbackRequest request = buildCallbackRequest();
+        request.getCaseDetails().getData().put(MANAGE_BARRISTER_PARTY, BarristerParty.APPLICANT);
         request.getCaseDetailsBefore().getData().put(APPLICANT_BARRISTER_COLLECTION, applicantBarristerCollection());
 
         ccdCallbackController.ccdSubmittedEvent(AUTH_TOKEN, request);
@@ -436,6 +427,7 @@ public class ManageBarristersITest implements IntegrationTest {
         when(idamService.getIdamUserId(AUTH_TOKEN)).thenReturn(USER_ID);
 
         CallbackRequest request = buildCallbackRequest();
+        request.getCaseDetails().getData().put(MANAGE_BARRISTER_PARTY, BarristerParty.APPLICANT);
         request.getCaseDetails().getData().put(APPLICANT_BARRISTER_COLLECTION, applicantBarristerCollection());
         request.getCaseDetails().getData().put(APPLICANT_REPRESENTED, YES_VALUE);
 
